<resources>
    <!--title-->
    <string name="title_modify_pw">修改密码</string>
    <string name="title_my_account_book">我的账本</string>
    <string name="title_mode_map">地图模式</string>
    <string name="title_mode_list">列表模式</string>
    <string name="title_work_list_detail">工单详情 </string>
    <string name="title_work_list_history">历史工单</string>
    <string name="title_my_work_list">我的工单</string>
    <!--other-->
    <string name="app_name">鼎湖快送</string>
    <string name="login_account_hint">请输入手机号</string>
    <string name="login_pw_hint">请输入密码</string>
    <string name="login_now">立即登录</string>
    <string name="forget_pw">忘记密码？</string>
    <string name="tab_main_work_list">我的工单</string>
    <string name="tab_main_user_center">个人中心</string>
    <string name="modify_pw">修改密码</string>
    <string name="history_work_list">历史工单</string>
    <string name="my_account_book">我的账本</string>
    <string name="exit">退出</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="pw_old_hint">请输入原始密码</string>
    <string name="pw_new_hint">请输入新密码</string>
    <string name="pw_again_hint">请再次输入新密码</string>
    <string name="statistics_month">统计月份：</string>
    <string name="account_title1">配送工单统计</string>
    <string name="store_name">当前门店：</string>
    <string name="work_list_count">工单总数（张）：</string>
    <string name="send_count">送水数量（桶）：</string>
    <string name="null_count">空桶数量（桶）：</string>
    <string name="long_count">长途次数（次）：</string>
    <string name="height_count">高层次数（次）：</string>
    <string name="account_title2">套餐工单统计</string>
    <string name="receive_count">收款金额（元）：</string>
    <string name="pay_count">交款金额（元）：</string>
    <string name="tab_todo_work_list">未完工工单</string>
    <string name="tab_today_work_list">今日已完工单</string>
    <string name="tab_history_work_list">历史完工单</string>
    <string name="date_start">起初日期：</string>
    <string name="date_end">结束日期：</string>
    <string name="date_account_statistics_title">请选择需要统计的月份</string>
    <string name="dialog_title_select_store">请选择门店</string>
    <!--网络-->
    <string name="load_error">网络异常</string>
    <string name="load_fail">加载失败\n请点击重试</string>
    <string name="load_no_data">暂无记录\n点击获取最新记录</string>
    <!--xlistview-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放更新</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">更新于：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">释放加载</string>
    <string name="xlistview_footer_hint_finish">数据加载完毕</string>

</resources>
