<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/img_login_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="45dp"
            android:background="@color/gray_c9c9c9"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_input_user_min"/>

            <EditText
                android:id="@+id/ev_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@color/trans"
                android:hint="@string/login_account_hint"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/text_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_c9c9c9"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_input_key_min"/>

            <EditText
                android:id="@+id/ev_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@color/trans"
                android:hint="@string/login_pw_hint"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/text_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_selector_login"
            android:text="@string/login_now"
            android:textColor="@color/white"
            android:textSize="@dimen/text_content"/>

        <TextView
            android:id="@+id/tv_forget_pw"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:gravity="bottom"
            android:text="@string/forget_pw"
            android:textColor="@color/red_f03636"
            android:textSize="@dimen/text_content"/>
    </LinearLayout>
</ScrollView>