<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <EditText
            android:id="@+id/ev_pw_old"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/trans"
            android:drawableLeft="@drawable/ico_input_key"
            android:drawablePadding="10dp"
            android:hint="@string/pw_old_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_d7d6d6"
            android:textSize="@dimen/text_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="5dp"
            android:background="@color/gray_dddddd" />

        <EditText
            android:id="@+id/ev_pw_new"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/trans"
            android:drawableLeft="@drawable/ico_input_key"
            android:drawablePadding="10dp"
            android:hint="@string/pw_new_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_d7d6d6"
            android:textSize="@dimen/text_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="5dp"
            android:background="@color/gray_dddddd" />

        <EditText
            android:id="@+id/ev_pw_again"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/trans"
            android:drawableLeft="@drawable/ico_input_key"
            android:drawablePadding="10dp"
            android:hint="@string/pw_again_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_d7d6d6"
            android:textSize="@dimen/text_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="5dp"
            android:background="@color/gray_dddddd" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_selector_exit"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:enabled="false"
            android:textSize="@dimen/text_content" />
    </LinearLayout>
</ScrollView>