<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/green_00cd92"
        android:gravity="center"
        android:text="@string/tab_main_user_center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_modify_pw"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/common_selector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico_user_key"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/modify_pw"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/text_content"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico_right"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_dddddd"/>

            <LinearLayout
                android:id="@+id/ll_history_work_list"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/common_selector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico_user_clock"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/history_work_list"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/text_content"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico_right"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_dddddd"/>

            <LinearLayout
                android:id="@+id/ll_my_account_book"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/common_selector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico_user_edit"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/my_account_book"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/text_content"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ico_right"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_dddddd"/>
        </LinearLayout>


        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_selector_exit"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_content"/>
    </FrameLayout>
</LinearLayout>